[package]
name = "fhe-ram"
version = "0.1.0"
edition = "2024"

[dependencies]
poulpy-hal = {path="../poulpy/poulpy-hal"}
poulpy-core =  {path="../poulpy/poulpy-core"}
poulpy-backend =  {path="../poulpy/poulpy-backend"}
poulpy-schemes =  {path="../poulpy/poulpy-schemes"}
rand_core = "0.9.3"
itertools = "0.14.0"